# mermaidjs-desktop-client

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  biome.jsonc  electron-builder.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml
electron/: main.ts  preload.ts  store.ts  tsconfig.json  types.ts
scripts/: after-pack.js
src/: global.d.ts  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/editor/: counter.ts  language.ts  theme.ts  zoom.ts
src/examples/: 01-flowchart.mmd  02-class.mmd  03-sequence.mmd  04-entity-relationship.mmd  05-state-diagram.mmd  06-gantt.mmd  07-git.mmd
src/help/: dialog.ts
src/outline/: parse.ts  view.ts
src/palette/: fuzzy.ts  registry.ts  ui.ts
src/preview/: copy-svg.ts  mermaid-loader.ts  render.ts  theme.ts  zoom.ts
src/toolbar/: actions.ts  examples-menu.ts  export-diagram.ts  export-menu.ts  new-diagram.ts  open-diagram.ts  recent-files.ts  save-diagram.ts  shortcuts.ts
src/ui/: dropdown.ts  toast.ts
src/utils/: debounce.ts
src/window/: state.ts
src/workspace/: resize.ts
tests/: csp.test.ts  setup.ts
tests/__mocks__/: electron.ts
tests/editor/: counter.test.ts  language.test.ts  theme.test.ts  zoom.test.ts
tests/electron/: main.test.ts  preload.test.ts  store.test.ts
tests/help/: dialog.test.ts
tests/outline/: parse.test.ts  view.test.ts
(+22 files in other folders)
